--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                     <div class="container">
                         <ul>
                             <li><a href="find-store.html">채식 식당 검색</a></li>
-                            <li><a href="">채식 도시락 신청</a></li>
+                            <li><a href="apply-lunchbox.html">채식 도시락 신청</a></li>
                             <li><a href="recipe.html">채식 레시피</a></li>
-                            <li><a href="#">가이드</a></li>
+                            <li><a href="guide.html">가이드</a></li>
                             <li><a href="#">Login</a></li>
                             <li><a href="#">Join</a></li>
                         </ul>
