--- a/apply-lunchbox.html
+++ b/apply-lunchbox.html
@@ -25,9 +25,9 @@
                 </div>
             </div>
             <div id="content">
-                <div id="guide">
+                <div id="apply">
                     <div class="container">
-                        가이드
+                        도시락 신청
                     </div>
                 </div>
             </div>
