--- a/guide.html
+++ b/guide.html
@@ -19,7 +19,7 @@
                         <li><a href="recipe.html">채식 레시피</a></li>
                         <li><a href="guide.html">가이드</a></li>
                         <li><a href="#">Login</a></li>
-                        <li><a href="#">Join</a></li>
+                        <li><a href="#">Sign Up</a></li>
                     </ul>
                     header
                 </div>
