--- a/index.html
+++ b/index.html
@@ -19,17 +19,12 @@
                             <li><a href="recipe.html">채식 레시피</a></li>
                             <li><a href="guide.html">가이드</a></li>
                             <li><a href="#">Login</a></li>
-                            <li><a href="#">Sign Up</a></li>
+                            <li><a href="signup.html">Sign Up</a></li>
                         </ul>
                         header
                     </div>
                 </div>
                 <div id="content">
-                    <div id="cont_cont1">
-                        <div class="container">
-                            cont_1
-                        </div>
-                    </div>
                     <div id="cont_ban">
                         <div class="container">
                             <div class="flex-wrap">
@@ -37,9 +32,29 @@
                             </div>
                         </div>
                     </div>
+                    <div id="cont_cont1">
+                        <div class="container">
+                            cont_1
+                        </div>
+                    </div>                    
                     <div id="cont_cont2">
                         <div class="container">
                             cont_2
+                        </div>
+                    </div>
+                    <div id="cont_cont3">
+                        <div class="container">
+                            cont_3
+                        </div>
+                    </div>                    
+                    <div id="cont_cont4">
+                        <div class="container">
+                            cont_4
+                        </div>
+                    </div>
+                    <div id="cont_cont5">
+                        <div class="container">
+                            cont_5
                         </div>
                     </div>
                 </div>
