--- a/recipe.html
+++ b/recipe.html
@@ -20,6 +20,7 @@
                     <li><a href="#">Login</a></li>
                     <li><a href="#">Sign Up</a></li>
                 </ul>
+                <a href="./index.html"><div id="gomain"></div></a>
             </div>
             <div id="content">
                 
