--- a/apply-lunchbox.html
+++ b/apply-lunchbox.html
@@ -23,7 +23,7 @@
                 <a href="./index.html"><div id="gomain"></div></a>
             </div>
             <div id="content">
-                
+                <div id="ad"></div>
             </div>
             <div id="footer">
                 <div class="container">
